[project]
name = "ratethisfloorplan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "djangorestframework>=3.16.1",
    "fastapi[standard]>=0.116.1",
    "jwt>=1.4.0",
    "sqlalchemy>=2.0.43",
]

[tool.ruff]
lint.extend.select = []

# ...but use a different line length.
line-length = 100
